--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -12,8 +12,21 @@
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/bottomBar"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true" >
-    </ListView>
 
+    </ListView>
+    <LinearLayout 
+        android:id="@+id/bottomBar"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true">
+    <CheckBox
+        android:id="@+id/checkBox2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="" />
+    </LinearLayout>
 </RelativeLayout>
