--- a/res/layout/item_row.xml
+++ b/res/layout/item_row.xml
@@ -37,5 +37,14 @@
         android:layout_marginTop="3dip"  
         android:layout_marginLeft="6dip">  
     </TextView>
-       
+
+    <CheckBox
+        android:id="@+id/checkBox1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/txtTitle"
+        android:text="" />
+    
+
 </RelativeLayout>
